feat(fga): 添加 FGA 授权模型与关系查询 API 接口 (260308)
新增 `IFgaAuthModelApiService` 和 `IFgaAuthViewApiService` 两个 API 接口，
用于 FGA 授权模型生命周期管理（创建、发布、激活、废弃、删除、列表）
以及关系枚举与展开查询（list-objects、list-users、expand）。

- `IFgaAuthModelApiService`: 暴露授权模型 CRUD 及状态流转 API。
- `IFgaAuthViewApiService`: 暴露关系枚举与展开 API。